@@ -1,21 +1,19 @@
 package org.prebid.server.hooks.modules.liveintent.omni.channel.identity.v1;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.iab.openrtb.request.BidRequest;
 import com.iab.openrtb.request.Eid;
 import com.iab.openrtb.request.Uid;
 import com.iab.openrtb.request.User;
 import io.vertx.core.Future;
-import io.vertx.core.MultiMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentMatcher;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.hooks.execution.v1.auction.AuctionInvocationContextImpl;
 import org.prebid.server.hooks.execution.v1.auction.AuctionRequestPayloadImpl;
-import org.prebid.server.hooks.modules.liveintent.omni.channel.identity.model.config.ModuleConfig;
+import org.prebid.server.hooks.modules.liveintent.omni.channel.identity.model.IdResResponse;
+import org.prebid.server.hooks.modules.liveintent.omni.channel.identity.model.config.LiveIntentOmniChannelProperties;
 import org.prebid.server.hooks.modules.liveintent.omni.channel.identity.v1.hooks.LiveIntentOmniChannelIdentityProcessedAuctionRequestHook;
 import org.prebid.server.hooks.v1.InvocationAction;
 import org.prebid.server.hooks.v1.InvocationResult;
@@ -23,174 +21,182 @@ import org.prebid.server.hooks.v1.InvocationStatus;
 import org.prebid.server.hooks.v1.auction.AuctionInvocationContext;
 import org.prebid.server.hooks.v1.auction.AuctionRequestPayload;
 import org.prebid.server.json.JacksonMapper;
+import org.prebid.server.json.ObjectMapperProvider;
 import org.prebid.server.vertx.httpclient.HttpClient;
 import org.prebid.server.vertx.httpclient.model.HttpClientResponse;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Random;
+import java.util.concurrent.TimeoutException;
 
+import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mock.Strictness.LENIENT;
+import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 public class LiveIntentOmniChannelIdentityProcessedAuctionRequestHookTest {
 
-    private ModuleConfig moduleConfig;
-    private LiveIntentOmniChannelIdentityProcessedAuctionRequestHook target;
-    private JacksonMapper jacksonMapper;
+    private static final JacksonMapper MAPPER = new JacksonMapper(ObjectMapperProvider.mapper());
 
     @Mock
     private HttpClient httpClient;
-    @Mock
-    private Random random;
 
-    private final ArgumentMatcher<MultiMap> bearerAuthHeaderMatcher = new ArgumentMatcher<>() {
-        @Override
-        public boolean matches(MultiMap entries) {
-            return entries.contains("Authorization", "Bearer " + moduleConfig.getAuthToken(), true);
-        }
-    };
+    @Mock(strictness = LENIENT)
+    private LiveIntentOmniChannelProperties properties;
+
+    private LiveIntentOmniChannelIdentityProcessedAuctionRequestHook target;
 
     @BeforeEach
     public void setUp() {
-        final ObjectMapper mapper = new ObjectMapper();
-        jacksonMapper = new JacksonMapper(mapper);
-
-        moduleConfig = new ModuleConfig();
-        moduleConfig.setRequestTimeoutMs(5);
-        moduleConfig.setIdentityResolutionEndpoint("https://test.com/idres");
-        moduleConfig.setAuthToken("secret_auth_token");
+        given(properties.getRequestTimeoutMs()).willReturn(5L);
+        given(properties.getIdentityResolutionEndpoint()).willReturn("https://test.com/idres");
+        given(properties.getAuthToken()).willReturn("auth_token");
+        given(properties.getTreatmentRate()).willReturn(1.0f);
 
         target = new LiveIntentOmniChannelIdentityProcessedAuctionRequestHook(
-                moduleConfig, 0.9f, jacksonMapper, httpClient, random);
+                properties, MAPPER, httpClient, 0.01d);
     }
 
     @Test
-    public void shouldAddResolvedEids() {
+    public void creationShouldFailOnInvalidIdentityUrl() {
+        given(properties.getIdentityResolutionEndpoint()).willReturn("invalid_url");
+        assertThatIllegalArgumentException().isThrownBy(() ->
+                new LiveIntentOmniChannelIdentityProcessedAuctionRequestHook(
+                        properties, MAPPER, httpClient, 0.01d));
+    }
+
+    @Test
+    public void callShouldEnrichUserEidsWithRequestedEids() {
         // given
-        final Uid providedUid = Uid.builder().id("id1").atype(2).build();
-        final Eid providedEid = Eid.builder().source("some.source.com")
-                .uids(Collections.singletonList(providedUid)).build();
+        final Uid givenUid = Uid.builder().id("id1").atype(2).build();
+        final Eid givenEid = Eid.builder().source("some.source.com").uids(singletonList(givenUid)).build();
+        final User givenUser = User.builder().eids(singletonList(givenEid)).build();
+        final BidRequest givenBidRequest = BidRequest.builder().id("request").user(givenUser).build();
 
-        final Uid enrichedUid = Uid.builder().id("id2").atype(3).build();
-        final Eid enrichedEid = Eid.builder().source("liveintent.com")
-                .uids(Collections.singletonList(enrichedUid)).build();
+        final Eid expectedEid = Eid.builder()
+                .source("liveintent.com")
+                .uids(singletonList(Uid.builder().id("id2").atype(3).build()))
+                .build();
 
-        final User user = User.builder().eids(Collections.singletonList(providedEid)).build();
-        final BidRequest bidRequest = BidRequest.builder().id("request").user(user).build();
+        final String responseBody = MAPPER.encodeToString(IdResResponse.of(List.of(expectedEid)));
+        given(httpClient.post(any(), any(), any(), anyLong()))
+                .willReturn(Future.succeededFuture(HttpClientResponse.of(200, null, responseBody)));
 
         final AuctionInvocationContext auctionInvocationContext = AuctionInvocationContextImpl.of(
                 null, null, false, null, null);
 
-        final HttpClientResponse mockResponse = mock(HttpClientResponse.class);
-
         // when
-        when(random.nextFloat()).thenReturn(0.89f);
-
-        when(mockResponse.getBody())
-                .thenReturn("{\"eids\": [ { \"source\": \"" + enrichedEid.getSource()
-                        + "\", \"uids\": [ { \"atype\": "
-                        + enrichedUid.getAtype()
-                        + ", \"id\" : \""
-                        + enrichedUid.getId() + "\" } ] } ] }");
-
-        when(
-                httpClient.post(
-                        eq(moduleConfig.getIdentityResolutionEndpoint()),
-                        argThat(bearerAuthHeaderMatcher),
-                        eq(jacksonMapper.encodeToString(bidRequest)),
-                        eq(moduleConfig.getRequestTimeoutMs())
-                )
-        ).thenReturn(Future.succeededFuture(mockResponse));
-
-        final Future<InvocationResult<AuctionRequestPayload>> future =
-                target.call(AuctionRequestPayloadImpl.of(bidRequest), auctionInvocationContext);
-        final InvocationResult<AuctionRequestPayload> result = future.result();
+        final InvocationResult<AuctionRequestPayload> result =
+                target.call(AuctionRequestPayloadImpl.of(givenBidRequest), auctionInvocationContext).result();
 
         // then
-        assertThat(future.succeeded()).isTrue();
         assertThat(result.status()).isEqualTo(InvocationStatus.success);
         assertThat(result.action()).isEqualTo(InvocationAction.update);
-        assertThat(result.payloadUpdate().apply(AuctionRequestPayloadImpl.of(bidRequest))
-                .bidRequest().getUser().getEids()).isEqualTo(List.of(providedEid, enrichedEid));
+        assertThat(result.payloadUpdate().apply(AuctionRequestPayloadImpl.of(givenBidRequest)))
+                .extracting(AuctionRequestPayload::bidRequest)
+                .extracting(BidRequest::getUser)
+                .extracting(User::getEids)
+                .isEqualTo(List.of(givenEid, expectedEid));
+
+        verify(httpClient).post(
+                eq("https://test.com/idres"),
+                argThat(headers -> headers.contains("Authorization", "Bearer auth_token", true)),
+                eq(MAPPER.encodeToString(givenBidRequest)),
+                eq(5L));
     }
 
     @Test
-    public void shouldNotAttemptToResolveEids() {
+    public void callShouldCreateUserAndUseRequestedEidsWhenUserIsAbsent() {
         // given
-        final Uid providedUid = Uid.builder().id("id1").atype(2).build();
-        final Eid providedEid = Eid.builder().source("some.source.com")
-                .uids(Collections.singletonList(providedUid)).build();
+        final BidRequest givenBidRequest = BidRequest.builder().id("request").user(null).build();
 
-        final User user = User.builder().eids(Collections.singletonList(providedEid)).build();
-        final BidRequest bidRequest = BidRequest.builder().id("request").user(user).build();
+        final Eid expectedEid = Eid.builder()
+                .source("liveintent.com")
+                .uids(singletonList(Uid.builder().id("id2").atype(3).build()))
+                .build();
+
+        final String responseBody = MAPPER.encodeToString(IdResResponse.of(List.of(expectedEid)));
+        given(httpClient.post(any(), any(), any(), anyLong()))
+                .willReturn(Future.succeededFuture(HttpClientResponse.of(200, null, responseBody)));
 
         final AuctionInvocationContext auctionInvocationContext = AuctionInvocationContextImpl.of(
                 null, null, false, null, null);
 
         // when
-        when(random.nextFloat()).thenReturn(0.91f);
-
-        final Future<InvocationResult<AuctionRequestPayload>> future =
-                target.call(AuctionRequestPayloadImpl.of(bidRequest), auctionInvocationContext);
-        final InvocationResult<AuctionRequestPayload> result = future.result();
+        final InvocationResult<AuctionRequestPayload> result =
+                target.call(AuctionRequestPayloadImpl.of(givenBidRequest), auctionInvocationContext).result();
 
         // then
-        assertThat(future.succeeded()).isTrue();
+        assertThat(result.status()).isEqualTo(InvocationStatus.success);
+        assertThat(result.action()).isEqualTo(InvocationAction.update);
+        assertThat(result.payloadUpdate().apply(AuctionRequestPayloadImpl.of(givenBidRequest)))
+                .extracting(AuctionRequestPayload::bidRequest)
+                .extracting(BidRequest::getUser)
+                .extracting(User::getEids)
+                .isEqualTo(List.of(expectedEid));
+
+        verify(httpClient).post(
+                eq("https://test.com/idres"),
+                argThat(headers -> headers.contains("Authorization", "Bearer auth_token", true)),
+                eq(MAPPER.encodeToString(givenBidRequest)),
+                eq(5L));
+    }
+
+    @Test
+    public void callShouldReturnNoActionSuccessfullyWhenTreatmentRateIsLowerThanThreshold() {
+        // given
+        final Uid givenUid = Uid.builder().id("id1").atype(2).build();
+        final Eid givebEid = Eid.builder().source("some.source.com").uids(singletonList(givenUid)).build();
+        final User givenUser = User.builder().eids(singletonList(givebEid)).build();
+        final BidRequest givenBidRequest = BidRequest.builder().id("request").user(givenUser).build();
+
+        final AuctionInvocationContext auctionInvocationContext = AuctionInvocationContextImpl.of(
+                null, null, false, null, null);
+
+        given(properties.getTreatmentRate()).willReturn(0.0f);
+
+        // when
+        final InvocationResult<AuctionRequestPayload> result = target.call(
+                        AuctionRequestPayloadImpl.of(givenBidRequest),
+                        auctionInvocationContext)
+                .result();
+
+        // then
         assertThat(result.status()).isEqualTo(InvocationStatus.success);
         assertThat(result.action()).isEqualTo(InvocationAction.no_action);
         assertThat(result.payloadUpdate()).isNull();
     }
 
     @Test
-    public void shouldCreateUserWhenNotPresent() {
+    public void callShouldReturnFailureWhenRequestingEidsIsFailed() {
         // given
-        final Uid enrichedUid = Uid.builder().id("id2").atype(3).build();
-        final Eid enrichedEid = Eid.builder().source("liveintent.com")
-                .uids(Collections.singletonList(enrichedUid)).build();
-
-        final BidRequest bidRequest = BidRequest.builder().id("request").build();
+        final Uid givenUid = Uid.builder().id("id1").atype(2).build();
+        final Eid givebEid = Eid.builder().source("some.source.com").uids(singletonList(givenUid)).build();
+        final User givenUser = User.builder().eids(singletonList(givebEid)).build();
+        final BidRequest givenBidRequest = BidRequest.builder().id("request").user(givenUser).build();
 
         final AuctionInvocationContext auctionInvocationContext = AuctionInvocationContextImpl.of(
                 null, null, false, null, null);
 
-        final HttpClientResponse mockResponse = mock(HttpClientResponse.class);
+        given(httpClient.post(any(), any(), any(), anyLong()))
+                .willReturn(Future.failedFuture(new TimeoutException("Timeout exceeded")));
 
         // when
-        when(random.nextFloat()).thenReturn(0.89f);
-
-        when(mockResponse.getBody())
-                .thenReturn("{\"eids\": [{ \"source\": \""
-                        + enrichedEid.getSource()
-                        + "\", \"uids\": [{ \"atype\": "
-                        + enrichedUid.getAtype() + ", \"id\" : \""
-                        + enrichedUid.getId() + "\" }]}]}");
-
-        when(
-                httpClient.post(
-                        eq(moduleConfig.getIdentityResolutionEndpoint()),
-                        argThat(bearerAuthHeaderMatcher),
-                        eq(jacksonMapper.encodeToString(bidRequest)),
-                        eq(moduleConfig.getRequestTimeoutMs())
-                )
-        ).thenReturn(Future.succeededFuture(mockResponse));
-
-        final Future<InvocationResult<AuctionRequestPayload>> future
-                = target.call(AuctionRequestPayloadImpl.of(bidRequest), auctionInvocationContext);
-        final InvocationResult<AuctionRequestPayload> result = future.result();
+        final Future<InvocationResult<AuctionRequestPayload>> result = target.call(
+                AuctionRequestPayloadImpl.of(givenBidRequest),
+                auctionInvocationContext);
 
         // then
-        assertThat(future.succeeded()).isTrue();
-        assertThat(result.status()).isEqualTo(InvocationStatus.success);
-        assertThat(result.action()).isEqualTo(InvocationAction.update);
-        assertThat(result.payloadUpdate()
-                .apply(AuctionRequestPayloadImpl.of(bidRequest))
-                .bidRequest()
-                .getUser()
-                .getEids()).isEqualTo(Collections.singletonList(enrichedEid));
+        assertThat(result.failed()).isTrue();
+        assertThat(result.cause()).isInstanceOf(TimeoutException.class);
+        assertThat(result.cause())
+                .isInstanceOf(TimeoutException.class)
+                .hasMessage("Timeout exceeded");
     }
 }
